@@ -24,6 +24,7 @@ Direct3D 11
 	* Added null checks to OutputMergerWrapper methods.
 	* Deprecated InputLayout constructor taking (device, elements, signature) in favor of one taking (device, signature, elements).
 	* Removed the dependence on D3D10 by duplicating ShaderBytecode and friends.
+	* Changed Effect construction to take a ShaderBytecode for the source data.
 	
 XAPO
 	* Implemented XAPO.
